ipacm: Start ipacm on post-fs
This partly reverts c43696b04d41ce6b64e7bb95e7a06c76d5f2a37e

Change-Id: Ide7b2272e95a7a443eb5394568ccd08586195d22

--- a/ipacm/src/ipacm.rc
+++ b/ipacm/src/ipacm.rc
@@ -29,8 +29,10 @@
 on post-fs-data
     mkdir /data/vendor/ipa 0770 radio radio
     chmod 0770 /data/vendor/ipa
+    start vendor.ipacm
 
 service vendor.ipacm /system/vendor/bin/ipacm
     class late_start
     user radio
     group radio inet
+    disabled
